# bob.ip.flandmark

./: .gitignore  README.rst  build_clandmark.sh  setup.py
bob/ip/flandmark/: __init__.py  flandmark.cpp  main.cpp  test.py
bob/ip/flandmark/data/: 8Lfrontal_LFW_SPLIT_1.xml
clandmark/: AUTHORS  CMakeLists.txt  README
clandmark/libclandmark/: CAppearanceModel.cpp  CAppearanceModel.h  CDeformationCost.cpp  CDeformationCost.h  CDisplacementDeformationCost.cpp  CDisplacementDeformationCost.h  CExtendedSparseLBPAppearanceModel.cpp  CExtendedSparseLBPAppearanceModel.h  CHOGAppearanceModel.cpp  CHOGAppearanceModel.h  CLandmark.cpp  CLandmark.h  CLoss.cpp  CLoss.h  CMakeLists.txt  CMaxSumSolver.cpp  CMaxSumSolver.h  CNormalizedEuclideanLoss.cpp  CNormalizedEuclideanLoss.h  CSparseLBPAppearanceModel.cpp  CSparseLBPAppearanceModel.h  CTableLoss.cpp  CTableLoss.h  CTimer.h  CTreeMaxSumSolver.cpp  CTreeMaxSumSolver.h  CXMLInOut.cpp  CXMLInOut.h  CZeroLoss.cpp  CZeroLoss.h  Flandmark.cpp  Flandmark.h  helpers.h  msvc-compat.h
doc/: guide.rst  index.rst
doc/plot/: show_lena.py
